cleared unnecessary files

--- a/index-sidebar.html
+++ b/index-sidebar.html
@@ -258,12 +258,12 @@
                               
                                 <div id="gallery" class="gallery full-gallery de-gallery pf_full_width pf_3_cols grid sequence">
                                     <!-- gallery item -->
-                                    <div class="item illustration website gallery-item pf-click" data-value="project-details-image.html">
+                                    <div class="item illustration website gallery-item " data-value="project-details-image.html">
                                         <div class="picframe wow">
                                             <span class="overlay">
                                                 <span class="pf_text">
-                                                    React Redux Firebase
-                                                    <span class="project-name">Netflix Clone</span>
+                                                    Netflix Clone / Coming soon
+                                                    <span class="project-name">React Redux Firebase</span>
                                                 </span>
                                             </span>
                                             <img src="images/portfolio/netflix.jpg" alt="" />
@@ -272,12 +272,13 @@
                                     <!-- close gallery item -->
 
                                     <!-- gallery item -->
-                                    <div class="item photography gallery-item pf-click" data-value="project-details-slider.html">
+                                    <div class="item photography gallery-item " data-value="project-details-slider.html">
                                         <div class="picframe wow">
                                             <span class="overlay">
                                                 <span class="pf_text">
-                                                    React Redux 
-                                                    <span class="project-name">Tesla Clone</span>
+                                                    <!-- React Redux  -->
+                                                    <a href="https://tesla-clone-zhamiliab.netlify.app/" target="_blank" > Tesla Clone</a>
+                                                    <span class="project-name">React Redux</span>
                                                 </span>
                                             </span>
                                             <img src="images/portfolio/tesla.jpg" alt="" />
@@ -286,11 +287,12 @@
                                     <!-- close gallery item -->
 
                                     <!-- gallery item -->
-                                    <div class="item illustration gallery-item pf-click" data-value="project-details-youtube.html">
+                                    <div class="item illustration gallery-item " data-value="project-details-youtube.html">
                                         <div class="picframe wow">
                                             <span class="overlay">
                                                 <span class="pf_text">
-                                                    React Redux 
+                                                    <!-- React Redux  -->
+                                                    Coming Soon
                                                     <span class="project-name">Welcome to Seattle</span>
                                                 </span>
                                             </span>
@@ -300,11 +302,11 @@
                                     <!-- close gallery item -->
 
                                    <!--   gallery item -->
-                                    <div class="item photography illustration mobile gallery-item pf-click" data-value="project-details-image-small.html">
+                                    <div class="item photography illustration mobile gallery-item " data-value="project-details-image-small.html">
                                         <div class="picframe wow">
                                             <span class="overlay">
                                                 <span class="pf_text">
-                                                    React simple project
+                                                    coming soon
                                                     <span class="project-name">Pomodoro timer </span>
                                                 </span>
                                             </span>
@@ -315,11 +317,11 @@
                                     <!-- close gallery item-->
 
                                     <!--  gallery item -->
-                                    <div class="item photography mobile website gallery-item pf-click" data-value="project-details-slider-big.html">
+                                    <div class="item photography mobile website gallery-item" data-value="project-details-slider-big.html">
                                         <div class="picframe wow">
                                             <span class="overlay">
                                                 <span class="pf_text">
-                                                    React without libraries
+                                                   coming soon
                                                     <span class="project-name">Register Form</span>
                                                 </span>
                                             </span>
@@ -329,7 +331,7 @@
                                     <!-- close gallery item -->
 
                                     <!-- gallery item -->
-                                    <div class="item mobile website gallery-item pf-click" data-value="project-details-youtube-big.html">
+                                    <div class="item mobile website gallery-item " data-value="project-details-youtube-big.html">
                                         <div class="picframe wow">
                                             <span class="overlay">
                                                 <span class="pf_text">
