--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             <div class="spacer-30"></div>
                             
                             <div class="col-md-6 offset-md-3 text-center">
-                                <p class="lead wow fadeInUp" data-wow-delay=".75s">Seattleeee, WA </p>
+                                <p class="lead wow fadeInUp" data-wow-delay=".75s">Seattle, WA </p>
                                 <div class="spacer-20"></div>
                                 <a class="btn-custom scroll-to wow fadeInUp" data-wow-delay="1s" href="#section-about">About Me</a>
                             </div>
