--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                     <!-- mainmenu close -->
                                 </div>
                                 <div class="align-self-center ml-auto header-col-right">
-                                    <div class="social-icons">                      <a href="https://www.linkedin.com/in/zhamilia-begalieva-73185285/" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
+                                    <div class="social-icons">                      <a href="https://www.linkedin.com/in/zhamilia-begalieva/" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
                                         <a href="https://github.com/zhamiliab" target="_blank"><i class="fab fa-github fa-lg"></i></a>
                                     </div>
 
@@ -119,7 +119,7 @@
                     <!-- mainmenu close -->
                     </div>
                     <div class="social-icons">                        
-                        <a href="https://www.linkedin.com/in/zhamilia-begalieva-73185285/" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
+                        <a href="https://www.linkedin.com/in/zhamilia-begalieva/" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
                         <a href="https://github.com/zhamiliab" target="_blank"><i class="fab fa-github fa-lg"></i></a>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
                             <div class="col-lg-5 offset-md-1 wow fadeInLeft" data-wow-delay=".5s">
                                 <h2>About Me</h2>
                                 <p>
-                                    I am a Frontend Developer specializing in JavaScript, React.JS, Node.JS. I have 2 years of experience in building and maintaining user interfaces. Passionate about learning and following up with state-of-the-art-technologies and methodologies. I have hands-on experience in implementing Mobile First Approach and responsive web design. I Enjoy working collaboratively in cross-functional team but can also take ownership and be proactive team player.
+                                    I am a Frontend Developer specializing in JavaScript, React.JS, Node.JS. I have an experience in building and maintaining user interfaces. Passionate about learning and following up with state-of-the-art-technologies and methodologies. I have hands-on experience in implementing Mobile First Approach and responsive web design. I Enjoy working collaboratively in cross-functional team but can also take ownership and be proactive team player.
                                 </p>
                                 <div class="spacer-10"></div>
                            </div>
@@ -413,7 +413,7 @@
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-md-6 sm-text-center mb-sm-30">
-                            &copy; Copyright 2020 - Zhamilia B
+                            &copy; Copyright 2022 - Zhamilia B
                         </div>
                     </div>
                 </div>
